<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_game"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/well_done"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourScore"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/theScore_st"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="30sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/saveBt"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/block_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/saveBt" />

    <Button
        android:id="@+id/next_lvl_btn"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/block_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/to_next_level"/>

    <Button
        android:id="@+id/to_main_menu_btn"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/block_bg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/main_menu"/>


</LinearLayout>