<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">


    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/name_edit"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/send_bt"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:background="@drawable/shape"
            android:textColor="#FFF"
            android:text="@string/send_bt"/>

        <Button
            android:id="@+id/cancle_bt"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:background="@drawable/shape2"
            android:textColor="#FFF"
            android:text="@string/cancel"
            android:layout_marginStart="60dp"/>

    </LinearLayout>

</RelativeLayout>