<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_logo_menu"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/setting_bt"
            android:background="@null"
            android:layout_margin="15dp"
            android:scaleType="fitXY"
            android:id="@+id/settings_btn"/>

    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@null"
        android:id="@+id/center"/>

    <Button
        android:id="@+id/play_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignBottom="@+id/center"
        android:layout_marginBottom="39dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/play_bt"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/score_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignTop="@+id/play_bt"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/score_board_bt"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/quit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="10dp"
        android:background="@null"
        android:text="@string/quit_bt"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</RelativeLayout>